--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,33 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color="danger">
     <ion-title>
-      Ionic Blank
+      Login with firebase
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+  <ion-item>
+ <ion-label floating>Email Address</ion-label>
+ <ion-input type="text" [(ngModel)]="user.email"></ion-input>
+</ion-item>
+
+
+  <ion-item>
+ <ion-label floating>password</ion-label>
+ <ion-input type="password" [(ngModel)]="user.password"></ion-input>
+</ion-item>
+<ion-footer>
+  <ion-grid>
+    <ion-row>
+      <ion-col col-6>
+<button ion-button (click)="login(user)">Login</button>
+</ion-col>
+<ion-col col-6>
+<button ion-button (click)="reg()" color="secondary">register</button>
+</ion-col>
+</ion-row>
+</ion-grid>
+</ion-footer>
+
 </ion-content>
